perf(recommend): parallelize CF metadata loading